k8_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: myapp-server-ingress
#  namespace: dev
spec:
  rules:
  - host: app.argocdhost.com
    http:
      paths:
      - backend:
          service:
            name: myweb-frontendapp-svc-dev
            port:
              number: 80
        path: /
        pathType: Prefix
